--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -53,15 +53,13 @@
         <div class="or-label">or</div>
         <div class="line-separator"></div>
     </div>
-    <div class="row">
-        <div class="col-md-12">
-            {#
-            <a class="btn btn-lg btn-google btn-block btn-outline" href="{% provider_login_url 'google' %}">
-                <img src="https://img.icons8.com/color/22/000000/google-logo.png"> Sign In with <b>Google</b>
-            </a>
-            #}
-        </div>
-    </div> <br>
+    {#<div class="row">#}
+        {#<div class="col-md-12">#}
+            {#<a class="btn btn-lg btn-google btn-block btn-outline" href="{% provider_login_url 'google' %}">#}
+                {#<img src="https://img.icons8.com/color/22/000000/google-logo.png"> Sign In with <b>Google</b>#}
+            {#</a>#}
+        {#</div>#}
+    {#</div> <br>#}
     <div class="row">
         <div class="col-md-12"> 
             <a class="btn btn-lg btn-google btn-block btn-outline" href="{% provider_login_url 'github' %}">
